| Summary: | ASTERISK-20253: HangupcauseClear XML Doc issue | ||
| Reporter: | Andrew Latham (lathama) | Labels: | |
| Date Opened: | 2012-08-17 17:27:16 | Date Closed: | 2012-08-17 20:39:07 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Functions/func_enum |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) hangupcause.diff | |
| Description: | [Aug 17 18:20:03] WARNING[6591] xmldoc.c: Couldn't find application HangupcauseClear in XML documentation [Aug 17 18:20:03] WARNING[6591] xmldoc.c: Couldn't find application HangupcauseClear in XML documentation Case issue with HangupcauseClear change hangupcause.c to HangupCauseClear and warning goes away. | ||
| Comments: | |||